# vistasoft-converters

./: CMakeLists.txt  README.md  class2nii.c  dat2nii.c  gray_io.c  gray_io.h  nifti_util.c  nifti_util.h  nii2class.c  nii2dat.c
